--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ioredis": "^5.4.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
+    "nestjs-paginate": "^10.0.0",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
