configured the env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,56 @@
-version: '3.4'
-
 services:
   jobslisting:
-    image: jobslisting
+    image: jobsapp
     build:
       context: .
       dockerfile: ./Dockerfile
     environment:
       NODE_ENV: production
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: redispassword # Added Redis password
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: walidaguib
+      DB_NAME: jobs
     ports:
       - 3000:3000
+    volumes:
+      - ./uploads:/usr/src/app/uploads
+    depends_on:
+      - redis
+      - postgres
+
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis:/data
+    environment:
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: redispassword
+
+    command:
+      ['redis-server', '--appendonly', 'yes', '--requirepass', 'redispassword']
+
+  postgres:
+    image: postgres:15
+    container_name: db
+    ports:
+      - '5432:5432'
+    environment:
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: walidaguib
+      DB_NAME: jobs
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
+  redis:
