--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "nestjs-paginate": "^10.0.0",
+    "nestjs-redis": "^1.3.3",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -59,7 +60,8 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^10.4.15",
+    "@suites/unit": "^3.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
